Versión inicial del proyecto TFC ASIR con Docker

--- a/app_adiosmundo/Dockerfile
+++ b/app_adiosmundo/Dockerfile
@@ -1,5 +1,17 @@
-FROM python:3.11-slim
+FROM python:3.9-slim
+
+# Establecer directorio de trabajo
 WORKDIR /app
-COPY . .
-RUN pip install --no-cache-dir fastapi uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
+
+# Copiar archivos de requerimientos e instalar dependencias
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copiar código de la aplicación
+COPY main.py .
+
+# Exponer el puerto que usará FastAPI
+EXPOSE 8000
+
+# Iniciar la aplicación con Uvicorn
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
