--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -1,3 +1,9 @@
+ServerName localhost
+Listen 80
+LoadModule mpm_event_module modules/mod_mpm_event.so
+LoadModule proxy_module modules/mod_proxy.so
+LoadModule proxy_http_module modules/mod_proxy_http.so
+
 <VirtualHost *:80>
     ServerName holamundo.local
     ProxyPass "/" "http://holamundo:80/"
