--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -1,9 +1,10 @@
 FROM httpd:2.4
 
-# Habilitar los módulos de proxy en Apache
-RUN sed -i 's/#LoadModule proxy_module/LoadModule proxy_module/' /usr/local/apache2/conf/httpd.conf \
- && sed -i 's/#LoadModule proxy_http_module/LoadModule proxy_http_module/' /usr/local/apache2/conf/httpd.conf \
- && sed -i 's/#Include conf\\/extra\\/httpd-vhosts.conf/Include conf\\/extra\\/httpd-vhosts.conf/' /usr/local/apache2/conf/httpd.conf
+# Habilitar los módulos necesarios y habilitar los virtual hosts
+RUN sed -i 's|#LoadModule proxy_module|LoadModule proxy_module|' /usr/local/apache2/conf/httpd.conf \
+ && sed -i 's|#LoadModule proxy_http_module|LoadModule proxy_http_module|' /usr/local/apache2/conf/httpd.conf \
+ && sed -i 's|#Include conf/extra/httpd-vhosts.conf|Include conf/extra/httpd-vhosts.conf|' /usr/local/apache2/conf/httpd.conf
 
-# Copiar archivo de configuración de Virtual Hosts
+# Copiar archivos de configuración personalizados
+COPY httpd.conf /usr/local/apache2/conf/httpd.conf
 COPY httpd-vhosts.conf /usr/local/apache2/conf/extra/httpd-vhosts.conf
