unica aplicacion con dos endpoints

--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -1,10 +1,12 @@
 FROM httpd:2.4
 
-# Habilitar los módulos necesarios y habilitar los virtual hosts
-RUN sed -i 's|#LoadModule proxy_module|LoadModule proxy_module|' /usr/local/apache2/conf/httpd.conf \
- && sed -i 's|#LoadModule proxy_http_module|LoadModule proxy_http_module|' /usr/local/apache2/conf/httpd.conf \
- && sed -i 's|#Include conf/extra/httpd-vhosts.conf|Include conf/extra/httpd-vhosts.conf|' /usr/local/apache2/conf/httpd.conf
+COPY ./httpd.conf /usr/local/apache2/conf/httpd.conf
+COPY ./httpd-vhosts.conf /usr/local/apache2/conf/extra/httpd-vhosts.conf
 
-# Copiar archivos de configuración personalizados
-COPY httpd.conf /usr/local/apache2/conf/httpd.conf
-COPY httpd-vhosts.conf /usr/local/apache2/conf/extra/httpd-vhosts.conf
+RUN echo "Include /usr/local/apache2/conf/extra/httpd-vhosts.conf" >> /usr/local/apache2/conf/httpd.conf
+
+RUN apt-get update && apt-get install -y libapache2-mod-proxy-html libxml2-dev && \
+    apt-get clean
+
+RUN sed -i '/LoadModule proxy_module/s/^#//g' /usr/local/apache2/conf/httpd.conf && \
+    sed -i '/LoadModule proxy_http_module/s/^#//g' /usr/local/apache2/conf/httpd.conf
