--- a/apache/httpd-vhosts.conf
+++ b/apache/httpd-vhosts.conf
@@ -1,13 +1,21 @@
-<VirtualHost *:80>
+Listen 8080
+
+<VirtualHost *:8080>
     ServerName holamundo.local
     ProxyPreserveHost On
-    ProxyPass / http://holamundo:8000/
-    ProxyPassReverse / http://holamundo:8000/
+    ProxyPass /holamundo http://app:8000/holamundo
+    ProxyPassReverse /holamundo http://app:8000/holamundo
+
+    ProxyPass /token http://app:8000/token
+    ProxyPassReverse /token http://app:8000/token
 </VirtualHost>
 
-<VirtualHost *:80>
+<VirtualHost *:8080>
     ServerName adiosmundo.local
     ProxyPreserveHost On
-    ProxyPass / http://adiosmundo:8000/
-    ProxyPassReverse / http://adiosmundo:8000/
+    ProxyPass /adiosmundo http://app:8000/adiosmundo
+    ProxyPassReverse /adiosmundo http://app:8000/adiosmundo
+
+    ProxyPass /token http://app:8000/token
+    ProxyPassReverse /token http://app:8000/token
 </VirtualHost>
