--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,27 +1,14 @@
-user  nginx;
-worker_processes  auto;
-
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
-
-events {
-    worker_connections  1024;
-}
+events {}
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    sendfile        on;
-    keepalive_timeout  65;
-
     server {
         listen 80;
         server_name holamundo.local;
 
         location / {
-            proxy_pass http://holamundo:8000;
+            proxy_pass http://apache:8080/holamundo;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
@@ -31,8 +18,9 @@ http {
         server_name adiosmundo.local;
 
         location / {
-            proxy_pass http://adiosmundo:8000;
+            proxy_pass http://apache:8080/adiosmundo;
             proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
     }
