--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -5,8 +5,6 @@ COPY ./httpd-vhosts.conf /usr/local/apache2/conf/extra/httpd-vhosts.conf
 
 RUN echo "Include /usr/local/apache2/conf/extra/httpd-vhosts.conf" >> /usr/local/apache2/conf/httpd.conf
 
-RUN apt update && apt install -y apache2 libxml2-dev && apt clean && \
-    a2enmod proxy proxy_http proxy_html xml2enc
-
+# Descomentar módulos proxy y proxy_http si están comentados en httpd.conf
 RUN sed -i '/LoadModule proxy_module/s/^#//g' /usr/local/apache2/conf/httpd.conf && \
     sed -i '/LoadModule proxy_http_module/s/^#//g' /usr/local/apache2/conf/httpd.conf
