--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -1,17 +1,8 @@
 ServerName localhost
-Listen 80
+Listen 8080
+
 LoadModule mpm_event_module modules/mod_mpm_event.so
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
 
-<VirtualHost *:80>
-    ServerName holamundo.local
-    ProxyPass "/" "http://holamundo:80/"
-    ProxyPassReverse "/" "http://holamundo:80/"
-</VirtualHost>
-
-<VirtualHost *:80>
-    ServerName adiosmundo.local
-    ProxyPass "/" "http://adiosmundo:80/"
-    ProxyPassReverse "/" "http://adiosmundo:80/"
-</VirtualHost>
+Include /usr/local/apache2/conf/httpd-vhosts.conf
