--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,7 @@ http {
         server_name holamundo.local;
 
         location / {
-            proxy_pass http://apache:8080/holamundo;
+            proxy_pass http://apache:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -18,7 +18,7 @@ http {
         server_name adiosmundo.local;
 
         location / {
-            proxy_pass http://apache:8080/adiosmundo;
+            proxy_pass http://apache:8080;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
