--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -1,9 +1,9 @@
 FROM httpd:2.4
 
+RUN mkdir -p /usr/local/apache2/conf/extra
+
 COPY ./httpd.conf /usr/local/apache2/conf/httpd.conf
 COPY ./httpd-vhosts.conf /usr/local/apache2/conf/extra/httpd-vhosts.conf
-
-RUN echo "Include /usr/local/apache2/conf/extra/httpd-vhosts.conf" >> /usr/local/apache2/conf/httpd.conf
 
 # Descomentar módulos proxy y proxy_http si están comentados en httpd.conf
 RUN sed -i '/LoadModule proxy_module/s/^#//g' /usr/local/apache2/conf/httpd.conf && \
