--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -1,8 +1,65 @@
-ServerName localhost
+ServerRoot "/usr/local/apache2"
 Listen 8080
 
+# ServerName global para evitar warnings
+ServerName localhost
+
+# Módulos necesarios para proxy y funcionamiento básico
 LoadModule mpm_event_module modules/mod_mpm_event.so
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
+LoadModule authn_file_module modules/mod_authn_file.so
+LoadModule authn_core_module modules/mod_authn_core.so
+LoadModule authz_host_module modules/mod_authz_host.so
+LoadModule authz_core_module modules/mod_authz_core.so
+LoadModule access_compat_module modules/mod_access_compat.so
+LoadModule auth_basic_module modules/mod_auth_basic.so
+LoadModule reqtimeout_module modules/mod_reqtimeout.so
+LoadModule filter_module modules/mod_filter.so
+LoadModule mime_module modules/mod_mime.so
+LoadModule log_config_module modules/mod_log_config.so
+LoadModule env_module modules/mod_env.so
+LoadModule headers_module modules/mod_headers.so
+LoadModule setenvif_module modules/mod_setenvif.so
+LoadModule version_module modules/mod_version.so
+LoadModule unixd_module modules/mod_unixd.so
+LoadModule status_module modules/mod_status.so
+LoadModule autoindex_module modules/mod_autoindex.so
+LoadModule dir_module modules/mod_dir.so
+LoadModule alias_module modules/mod_alias.so
 
+# Usuario y grupo estándar de la imagen oficial
+User daemon
+Group daemon
+
+ServerAdmin you@example.com
+
+DocumentRoot "/usr/local/apache2/htdocs"
+<Directory "/usr/local/apache2/htdocs">
+    Options Indexes FollowSymLinks
+    AllowOverride None
+    Require all granted
+</Directory>
+
+<Directory />
+    AllowOverride none
+    Require all denied
+</Directory>
+
+# Logs a consola (recomendado para Docker)
+ErrorLog /proc/self/fd/2
+LogLevel warn
+CustomLog /proc/self/fd/1 common
+
+# Seguridad extra
+<Files ".ht*">
+    Require all denied
+</Files>
+
+# Index por defecto
+<IfModule dir_module>
+    DirectoryIndex index.html
+</IfModule>
+
+# Incluye el archivo de virtualhosts
 Include /usr/local/apache2/conf/extra/httpd-vhosts.conf
