funciona el json

--- a/apache/httpd-vhosts.conf
+++ b/apache/httpd-vhosts.conf
@@ -1,16 +1,14 @@
 <VirtualHost *:8080>
-    ServerName holamundo.local
+    ServerName localhost
+
     ProxyPreserveHost On
+
+    ProxyPass / http://app:8000/
+    ProxyPassReverse / http://app:8000/
+
     ProxyPass /holamundo http://app:8000/holamundo
     ProxyPassReverse /holamundo http://app:8000/holamundo
 
-    ProxyPass /token http://app:8000/token
-    ProxyPassReverse /token http://app:8000/token
-</VirtualHost>
-
-<VirtualHost *:8080>
-    ServerName adiosmundo.local
-    ProxyPreserveHost On
     ProxyPass /adiosmundo http://app:8000/adiosmundo
     ProxyPassReverse /adiosmundo http://app:8000/adiosmundo
 
