funciona el html

--- a/apache/httpd-vhosts.conf
+++ b/apache/httpd-vhosts.conf
@@ -1,17 +1,15 @@
 <VirtualHost *:8080>
-    ServerName localhost
+    ServerName holamundo.local
 
     ProxyPreserveHost On
-
     ProxyPass / http://app:8000/
     ProxyPassReverse / http://app:8000/
+</VirtualHost>
 
-    ProxyPass /holamundo http://app:8000/holamundo
-    ProxyPassReverse /holamundo http://app:8000/holamundo
+<VirtualHost *:8080>
+    ServerName adiosmundo.local
 
-    ProxyPass /adiosmundo http://app:8000/adiosmundo
-    ProxyPassReverse /adiosmundo http://app:8000/adiosmundo
-
-    ProxyPass /token http://app:8000/token
-    ProxyPassReverse /token http://app:8000/token
+    ProxyPreserveHost On
+    ProxyPass / http://app:8000/
+    ProxyPassReverse / http://app:8000/
 </VirtualHost>
