--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY ./requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
-
+RUN apt update && apt install -y default-mysql-client
 COPY ./ /app/
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
