--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   mysql:
     image: mysql:8.0
@@ -13,6 +12,11 @@ services:
       - "3306:3306"
     networks:
       - elk-net
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-uuser", "-pabc123"]
+      interval: 5s
+      retries: 30
+      start_period: 10s
 
   app:
     build:
