--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -32,7 +32,7 @@ LoadModule alias_module modules/mod_alias.so
 User daemon
 Group daemon
 
-ServerAdmin you@example.com
+ServerAdmin alex@iesrodeira.com
 
 DocumentRoot "/usr/local/apache2/htdocs"
 <Directory "/usr/local/apache2/htdocs">
