--- a/apache/httpd-vhosts.conf
+++ b/apache/httpd-vhosts.conf
@@ -1,13 +1,5 @@
 <VirtualHost *:8080>
-    ServerName holamundo.local
-
-    ProxyPreserveHost On
-    ProxyPass / http://app:8000/
-    ProxyPassReverse / http://app:8000/
-</VirtualHost>
-
-<VirtualHost *:8080>
-    ServerName adiosmundo.local
+    ServerName tfc.local
 
     ProxyPreserveHost On
     ProxyPass / http://app:8000/
