--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,19 +3,7 @@ events {}
 http {
     server {
         listen 80;
-        server_name holamundo.local;
-
-        location / {
-            proxy_pass http://apache:8080;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-    }
-
-    server {
-        listen 80;
-        server_name adiosmundo.local;
+        server_name tfc.local;
 
         location / {
             proxy_pass http://apache:8080;
